--- a/angular/src/app/main/reconcilliation/amortized/amortized.component.css
+++ b/angular/src/app/main/reconcilliation/amortized/amortized.component.css
@@ -943,6 +943,11 @@
             cursor: pointer;
         }
     }
+    .attachments_section_none {
+        display: inline-block;
+        width: 200px;
+        padding: 10px 5px;
+    }
     @media only screen and (max-width:1140px){
         button.btn.arrow-btn{
             margin: 0 10px; 
