--- a/angular/src/app/main/reconcilliation/reconcilliation.component.html
+++ b/angular/src/app/main/reconcilliation/reconcilliation.component.html
@@ -2,8 +2,8 @@
     <div [class]="containerClass">
         <div class="kt-subheader__main">
             <h3 class="kt-subheader__title">
-                <img src="./assets/media/ClosingCheckList/clipboard.svg" alt="clipboard">
-                <span> Reconciliation</span>
+                <img src="./assets/media/ClosingCheckList/reconcilliation.svg" alt="clipboard">
+                <span class="headSpace"> Reconciliation</span>
             </h3>
             <span class="kt-subheader__separator kt-subheader__separator--v"></span>
             <span class="kt-subheader__desc">
@@ -181,7 +181,7 @@
                                             <span class="">{{item.reconciliationType}}</span>
                                         </td>
                                         <td class="accountSubtype-cell">
-                                            <span class=""> $ 111</span>
+                                            <span class=""> $ {{item.balance  | formater}}</span>
                                         </td>
                                        
                                         <td class="assignee-cell">
